--- a/app/src/main/res/layout/speaker_view.xml
+++ b/app/src/main/res/layout/speaker_view.xml
@@ -10,13 +10,13 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/room_card"
+            style="@style/CardView.Light"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             app:cardBackgroundColor="@color/cardBackground"
             app:cardCornerRadius="8dp"
-            app:cardElevation="8dp"
-            style="@style/CardView.Light">
+            app:cardElevation="8dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -38,11 +38,11 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginStart="16dp"
+                        android:contentDescription="@string/speaker"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@mipmap/speaker_round"
-                        android:contentDescription="@string/speaker" />
+                        app:srcCompat="@mipmap/speaker_round" />
 
 
                     <TextView
@@ -61,8 +61,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:textSize="22sp"
                         android:textColor="@color/colorCardTitle"
+                        android:textSize="22sp"
                         app:layout_constraintBottom_toTopOf="@+id/speaker_state"
                         app:layout_constraintStart_toEndOf="@+id/imageView"
                         app:layout_constraintTop_toBottomOf="@+id/speaker_location" />
@@ -72,31 +72,31 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:textSize="16sp"
                         android:textColor="@color/colorTextSubtitle"
-                        app:layout_constraintTop_toBottomOf="@+id/speaker_name"
-                        app:layout_constraintStart_toEndOf="@+id/imageView" />
+                        android:textSize="16sp"
+                        app:layout_constraintStart_toEndOf="@+id/imageView"
+                        app:layout_constraintTop_toBottomOf="@+id/speaker_name" />
 
                     <TextView
                         android:id="@+id/song_state"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:textSize="16sp"
                         android:textColor="@color/colorTextSubtitle"
+                        android:textSize="16sp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/speaker_state"
-                        app:layout_constraintStart_toEndOf="@+id/imageView" />
+                        app:layout_constraintStart_toEndOf="@+id/imageView"
+                        app:layout_constraintTop_toBottomOf="@+id/speaker_state" />
 
                     <ImageButton
                         android:id="@+id/expandBtn"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:layout_marginEnd="20dp"
                         android:background="@drawable/ripple_effect"
                         android:contentDescription="@string/extend_arrow"
                         android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                         android:tint="@color/colorButtons"
-                        android:layout_marginEnd="20dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -122,10 +122,10 @@
                             android:layout_width="50dp"
                             android:layout_height="30dp"
                             android:layout_marginStart="10dp"
+                            android:theme="@style/SwitchTheme"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            android:theme="@style/SwitchTheme"/>
+                            app:layout_constraintTop_toTopOf="parent" />
 
                         <ImageButton
                             android:id="@+id/speaker_previous"
@@ -180,13 +180,13 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
-                            android:tint="@color/buttonImagesColor"
+                            android:contentDescription="@string/volumen"
                             android:src="@drawable/ic_baseline_volume_up_24"
+                            android:tint="@color/buttonImagesColor"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toStartOf="@+id/speaker_seekbar"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            android:contentDescription="@string/volumen" />
+                            app:layout_constraintTop_toTopOf="parent" />
 
                         <SeekBar
                             android:id="@+id/speaker_seekbar"
@@ -234,13 +234,23 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-                    <ListView
-                        android:id="@+id/playlist"
+                    <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@id/constraintLayout8"
                         app:layout_constraintEnd_toEndOf="parent"
-                        />
+                        app:layout_constraintTop_toBottomOf="@id/constraintLayout8"
+                        app:layout_constraintStart_toStartOf="parent"
+                        >
+                        <ListView
+                            android:id="@+id/playlist"
+                            android:layout_width="match_parent"
+                            android:layout_height="200dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
