--- a/app/src/main/res/layout/speaker_view.xml
+++ b/app/src/main/res/layout/speaker_view.xml
@@ -241,14 +241,50 @@
                         app:layout_constraintTop_toBottomOf="@id/constraintLayout8"
                         app:layout_constraintStart_toStartOf="parent"
                         >
-                        <ListView
-                            android:id="@+id/playlist"
-                            android:layout_width="match_parent"
-                            android:layout_height="200dp"
-                            app:layout_constraintTop_toTopOf="parent"
+
+                        <TextView
+                            android:id="@+id/playlist_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="30dp"
+                            android:text="@string/playlist"
+                            android:textColor="@color/colorTextSubtitle"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/playlist_item_1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:textColor="@color/colorTextSubtitle"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            />
+                            app:layout_constraintTop_toBottomOf="@+id/playlist_title" />
+
+                        <TextView
+                            android:id="@+id/playlist_item_2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorTextSubtitle"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/playlist_item_1"
+                            android:layout_marginTop="10dp"/>
+
+                        <TextView
+                            android:id="@+id/playlist_item_3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="20dp"
+                            android:textColor="@color/colorTextSubtitle"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/playlist_item_2" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
