--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="buttonGroupStrokeColorChecked">#72E1C7</color>
     <color name="buttonGroupTextColorChecked">#72E1C7</color>
     <color name="buttonGroupStrokeColorUnchecked">#A6A6A6</color>
+    <color name="colorLupa">#3C3F58</color>
 </resources>
