--- a/app/src/main/res/layout/room_view.xml
+++ b/app/src/main/res/layout/room_view.xml
@@ -48,8 +48,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
+                    android:textSize="20sp"
                     android:text="@string/habitacion"
                     android:textColor="@color/colorCardTitle"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -63,6 +62,7 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="20dp"
+                    android:textSize="20sp"
                     android:textColor="@color/colorCardTitle"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView12"
