--- a/app/src/main/res/layout-sw600dp/ac_view.xml
+++ b/app/src/main/res/layout-sw600dp/ac_view.xml
@@ -105,6 +105,8 @@
                         android:id="@+id/ac_switch"
                         android:layout_width="50dp"
                         android:layout_height="30dp"
+                        android:scaleX="1.5"
+                        android:scaleY="1.5"
                         android:layout_marginStart="10dp"
                         android:theme="@style/SwitchTheme"
                         app:layout_constraintStart_toStartOf="parent"
@@ -257,7 +259,7 @@
                                 android:id="@+id/v_22_button"
                                 style="@style/outlinedButton"
                                 android:textSize="24sp"
-                                android:layout_width="70dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/veintidos" />
 
@@ -265,7 +267,7 @@
                                 android:id="@+id/v_45_button"
                                 style="@style/outlinedButton"
                                 android:textSize="24sp"
-                                android:layout_width="70dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/cuarentaycinco" />
 
@@ -273,7 +275,7 @@
                                 android:id="@+id/v_67_button"
                                 style="@style/outlinedButton"
                                 android:textSize="24sp"
-                                android:layout_width="70dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/sesentaysiete" />
 
@@ -281,7 +283,7 @@
                                 android:id="@+id/v_90_button"
                                 style="@style/outlinedButton"
                                 android:textSize="24sp"
-                                android:layout_width="70dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/noventa" />
 
@@ -320,14 +322,14 @@
                                 android:id="@+id/h_n90_button"
                                 style="@style/outlinedButton"
                                 android:textSize="24sp"
-                                android:layout_width="80dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/menosNoventa" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/h_n45_button"
                                 style="@style/outlinedButton"
-                                android:layout_width="80dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/menoscuarentaycinco"
                                 android:textSize="24sp" />
@@ -336,7 +338,7 @@
                                 android:id="@+id/h_0_button"
                                 style="@style/outlinedButton"
                                 android:textSize="24sp"
-                                android:layout_width="70dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/cero" />
 
@@ -344,7 +346,7 @@
                                 android:id="@+id/h_45_button"
                                 style="@style/outlinedButton"
                                 android:textSize="24sp"
-                                android:layout_width="70dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/cuarentaycinco" />
 
@@ -352,7 +354,7 @@
                                 android:id="@+id/h_90_button"
                                 style="@style/outlinedButton"
                                 android:textSize="24sp"
-                                android:layout_width="70dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/noventa" />
 
@@ -392,7 +394,7 @@
                                 android:id="@+id/fs_25_button"
                                 style="@style/outlinedButton"
                                 android:textSize="24sp"
-                                android:layout_width="70dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/veinticinco" />
 
@@ -400,7 +402,7 @@
                                 android:id="@+id/fs_50_button"
                                 style="@style/outlinedButton"
                                 android:textSize="24sp"
-                                android:layout_width="70dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/cincuenta" />
 
@@ -408,7 +410,7 @@
                                 android:id="@+id/fs_75_button"
                                 style="@style/outlinedButton"
                                 android:textSize="24sp"
-                                android:layout_width="70dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/setentaycinco" />
 
@@ -416,7 +418,7 @@
                                 android:id="@+id/fs_100_button"
                                 style="@style/outlinedButton"
                                 android:textSize="24sp"
-                                android:layout_width="80dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/cien" />
 
@@ -426,6 +428,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/percentage"
+                            android:textSize="20dp"
                             app:layout_constraintBottom_toBottomOf="@+id/fan_speed_toggle_group"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/fan_speed_toggle_group"
