vista table con 2 columnas

--- a/app/src/main/res/layout-sw600dp/ac_view.xml
+++ b/app/src/main/res/layout-sw600dp/ac_view.xml
@@ -83,6 +83,8 @@
                         android:id="@+id/expandBtn"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:scaleX="2"
+                        android:scaleY="2"
                         android:layout_marginEnd="20dp"
                         android:background="@drawable/ripple_effect"
                         android:contentDescription="@string/extend_arrow"
@@ -428,7 +430,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/percentage"
-                            android:textSize="20dp"
+                            android:textSize="20sp"
                             app:layout_constraintBottom_toBottomOf="@+id/fan_speed_toggle_group"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/fan_speed_toggle_group"
