--- a/app/src/main/res/layout-sw600dp/blinds_layout.xml
+++ b/app/src/main/res/layout-sw600dp/blinds_layout.xml
@@ -82,6 +82,8 @@
                         android:id="@+id/expandBtn"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:scaleX="2"
+                        android:scaleY="2"
                         android:background="@drawable/ripple_effect"
                         android:contentDescription="@string/extend_arrow"
                         android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
