--- a/app/src/main/res/layout/fragment_homes.xml
+++ b/app/src/main/res/layout/fragment_homes.xml
@@ -38,6 +38,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/noDevices"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="@string/noDevicesFavoritesMessage"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
