--- a/app/src/main/res/layout/fragment_rutinas.xml
+++ b/app/src/main/res/layout/fragment_rutinas.xml
@@ -6,9 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".fragments.RoutinesFragment">
 
-     TODO: Update blank fragment layout
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/noDevices"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="@string/noDevicesFavoritesMessage"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
