--- a/app/src/main/res/layout/speaker_view.xml
+++ b/app/src/main/res/layout/speaker_view.xml
@@ -107,7 +107,8 @@
                     android:id="@+id/expandableLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"><!--android:visibility="gone"-->
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
+                    android:visibility="gone">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/constraintLayout5"
