--- a/app/src/main/res/layout/fragment_homes.xml
+++ b/app/src/main/res/layout/fragment_homes.xml
@@ -41,13 +41,19 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/noDevices"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/homes_spinner">
             <TextView
                 android:layout_width="wrap_content"
-                android:text="@string/noDevicesFavoritesMessage"
                 android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:textAlignment="center"
+                android:text="@string/noDevicesHomesMessage"
+                android:paddingHorizontal="15dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
