--- a/app/src/main/res/layout/fragment_rutinas.xml
+++ b/app/src/main/res/layout/fragment_rutinas.xml
@@ -17,9 +17,13 @@
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
-            android:text="@string/noDevicesFavoritesMessage"
             android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:textAlignment="center"
+            android:text="@string/noDevicesRutinasMessage"
+            android:paddingHorizontal="15dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
